--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
                     <img src="img/logo-2.png" class="mb-3" width="563"
                         height="278" loading="lazy">
-                    <a href="#tropicalia"
+                    <a href="ACADEMIA"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
@@ -44,18 +44,14 @@
               </div>
         </section>
 
-        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
+        <section id="ACADEMIA" class="my-5 pt-6 secao-tropicalia">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center">
                     <img src="img/image (1).png" class="rounded-pill" alt="" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <h2>O que é a musculação?</h2>
+                    <p class="p-2">É um tipo de treinamento de força que utiliza o esforço dos músculos contra uma resistência externa, como pesos, halteres, barras ou máquinas, para promover o fortalecimento e o aumento da massa muscular. A prática, realizada em academias ou outros centros, visa diversos objetivos, incluindo a melhora da saúde geral, o aumento da força, a modificação da composição corporal e a prevenção de lesões, sendo fundamental a orientação de um profissional qualificado.  Fonte: Site Toda a matéria</p>
                 </div>
             </div>
         </section>
