--- a/index.html
+++ b/index.html
@@ -66,17 +66,16 @@
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
+                        <img src="IMG/olympia-1.jpg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Gilberto_Gil_nos_anos_1960.tif.jpg" class="img-fluid rounded-5" loading="lazy">
+                        <img src="IMG/1-kevin-levrone-atualmente-30613625.avif" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
-                            class="img-fluid rounded-5" loading="lazy">
+                        <img src="IMG/" loading="lazy">
                     </div>
                 </div>
              </div>
@@ -92,7 +91,7 @@
                             <input type="text" id="nome" name="nome" class="form-control rounded-3 mt-1"
                                 placeholder="Digite seu nome completo">
                         </div>
-                        <div class="form-group mb-3">
+                        <div class="form-group mb-3">img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
                             <label for="email">Email</label>
                             <input type="email" id="email" name="email" class="form-control rounded-3 mt-1"
                                 placeholder="Digite seu email">
