--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="img/mr olympia.jpg" alt="A imagem apresenta o campeonato de fisiculturismo/musculação mundialmente famoso denominado como MR.OLYMPIA, nesse caso refere-se ao campeonato de 1975." title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="img/FTS PROJETO/ronnnie.jpg" alt="A imagem apresenta o campeonato de fisiculturismo/musculação mundialmente famoso denominado como MR.OLYMPIA, nesse caso refere-se ao campeonato de 1975." title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
               </div>
         </section>
