--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/mr olympia.jpg" class="mb-3" width="563"
+                    <img src="img/FTS PROJETO/ronnnie.jpg" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#tropicalia"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="img/FTS PROJETO/ronnnie.jpg" alt="A imagem apresenta o campeonato de fisiculturismo/musculação mundialmente famoso denominado como MR.OLYMPIA, nesse caso refere-se ao campeonato de 1975." title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="img/FTS PROJETO/olympia.jpg" alt="A imagem apresenta o campeonato de fisiculturismo/musculação mundialmente famoso denominado como MR.OLYMPIA, nesse caso refere-se ao campeonato de 1975." title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
               </div>
         </section>
