--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>Musculação</title>
+    <title>Tropicália</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -40,13 +40,13 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/FTS PROJETO/ronnnie.jpg" class="mb-3" width="289"
+                    <img src="img/logo-2.png" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#tropicalia"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="img/FTS PROJETO/olympia.jpg" alt="A imagem apresenta o campeonato de fisiculturismo/musculação mundialmente famoso denominado como MR.OLYMPIA, nesse caso refere-se ao campeonato de 1975." title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
               </div>
         </section>
@@ -54,11 +54,15 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/Banner-Blog-1-scaled.jpg" class="rounded-pill" width="273" height="331" loading="lazy">
+                    <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que é musculação?</h2>
-                    <p class="p-2">É uma atividade física que usa resistência — geralmente pesos, máquinas ou o próprio peso do corpo — para fortalecer e desenvolver os músculos. Ela serve para aumentar força e massa muscular (hipertrofia), melhorar a resistência, densidade óssea e composição corporal, além de trazer benefícios metabólicos e de saúde mental, como redução do estresse e da flacidez. </p>
+                    <h2>O que foi a Tropicália?</h2>
+                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
+                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
+                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
+                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
+                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
                 </div>
             </div>
         </section>
@@ -69,20 +73,20 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/FTS PROJETO/kevin-levrone-giant-wheels-header.jpg"
+                        <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/FTS PROJETO/ronnie.jpg" class="img-fluid rounded-5"
+                        <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/FTS PROJETO/ramon.jpg" class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/lossy-page1-640px-Gilberto_Gil_nos_anos_1960.tif.jpg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/FTS PROJETO/cbum.jpg"
+                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
